--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,25 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "MVDvita",
+  "name": "Matthias von Deetzen",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "static/icons/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "static/icons/deetzen_192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "static/icons/deetzen_512.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#3085ad",
+  "background_color": "#49b0bc"
 }
