add now configuration

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-dom": "16.8.6",
     "react-ga": "2.6.0",
     "react-icons": "3.7.0",
+    "react-scripts": "^3.0.1",
     "react-smart-sections": "0.0.2",
     "smart-sections": "0.0.6"
   },
@@ -20,6 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build && node ./postbuild.js && rimraf ./build/**/*.map",
+    "now-build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
